# HW4_Logreg

./: README.md  main.py  pyproject.toml
.gitverse/workflows/: smartclass.yml
src/ml_logreg_hw/: model.py
tests/: test_model.py
