[project]
name = "ml_logreg_hw"
version = "0.1.0"
description = "Homework: Logistic Regression on Diabetes Dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.3.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.4.0",
    "scipy>=1.15.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

